--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "frees-au/ce-base-recipes",
+    "name": "frees-au/ce-recipes",
     "description": "Free Sauce recipes.",
     "type": "drupal-recipe",
     "license": "GPL-2.0-or-later"
